
<resources>
    <string name="app_name">inmobiliaria-movil</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salir">Salir</string>
    <string name="contratos">Contratos</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="perfil">Perfil</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="agregar_inmueble">Agregar Inmueble</string>
    <string name="title_lista_inmuebles">Lista Inmuebles</string>
    <string name="mas_opciones">Mas Opciones</string>
    <string name="imagen_inmueble">imagen inmueble\n</string>
    <string name="direccion_inmueble">Direccion Inmueble</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="perfil_propietario">Perfil del Propietario</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="editar">Editar</string>
    <string name="cambiar_contraseña">Cambiar contraseña</string>
    <string name="perfil_subtitulo">Edita tu perfil facilmente!</string>
    <string name="guardar">Guardar</string>
    <string name="contraseña_actual">Contraseña actual</string>
</resources>