<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/location"
            android:title="@string/ubicacion" />
        <item
            android:id="@+id/contratosFragment"
            android:icon="@drawable/contract"
            android:title="@string/contratos" />
        <item
            android:id="@+id/inmueblesFragment"
            android:icon="@drawable/inmuebles"
            android:title="@string/inmuebles" />
        <item
            android:id="@+id/inquilinosFragment"
            android:icon="@drawable/inquilinos"
            android:title="@string/inquilinos" />
        <item
            android:id="@+id/perfilFragment"
            android:icon="@drawable/account"
            android:title="@string/perfil" />
        <item
            android:id="@+id/salirFragment"
            android:icon="@drawable/salir"
            android:title="@string/salir" />
    </group>
</menu>